clusters/maktha/manifests/ingress/nginx/network-policies.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-loadbalancer
  namespace: ingress-nginx
spec:
  podSelector: {}
  policyTypes:
    - Ingress
  ingress:
    # Allow from load balancer only
    - from:
        # NodePort with local traffic policy, source IP preserved
        - ipBlock:
            cidr: 10.244.0.254/32
      ports:
        # Use port after NodePort DNAT
        - port: 80
        - port: 443
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-webhook
  namespace: ingress-nginx
spec:
  podSelector: {}
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector: {}
      ports:
        - port: 8443
